err/functionalpython.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FunctionalPython'...
Listing './lib/python3.5/site-packages/FunctionalPython/src'...
Listing './lib/python3.5/site-packages/FunctionalPython/src/lists'...
Compiling './lib/python3.5/site-packages/FunctionalPython/src/lists/dict2list.py'...
***   File "./lib/python3.5/site-packages/FunctionalPython/src/lists/dict2list.py", line 33
    """
Return an array given a dictionary"
author: Yuhang(Steven) Wang
date: 06/20/2016
""
def flatten_dict(d):
    def find_keys(obj):
        if isinstance(obj, dict):
            return [x for x in obj.keys()]
        else:
            return []
        
    def aux(obj, keys, atom_accum, result_accum):
        if len(keys) == 0:
            return result_accum + [atom_accum + [obj]]
        elif len(keys) == 1:
            k = keys[0]
            return aux(obj[k], find_keys(obj[k]), atom_accum + [k], result_accum)
        else:
            k_now = keys[0]
            k_next = keys[1]
            return aux(
                    obj[k_next], 
                    find_keys(obj[k_next]), 
                    atom_accum + [k_next], 
                    aux(obj[k_now], find_keys(obj[k_now]), atom_accum + [k_now], result_accum)
                    )
        
    if not isinstance(d, dict):
        return []
    else:
        return aux(d, find_keys(d), [], [])
       
                                   
                           
                
  
                    
                       
                                 
                                          
             
                     
        
                                                 
                          
                                                      
                            
                       
                                                                                 
             
                           
                            
                       
                                 
                                            
                                           
                                                                                              
                     
        
                               
                 
         
                                          ^
SyntaxError: EOF while scanning triple-quoted string literal

Listing './lib/python3.5/site-packages/FunctionalPython/tests'...
Listing './lib/python3.5/site-packages/FunctionalPython/tests/list'...
Listing './lib/python3.5/site-packages/FunctionalPython/tests/list/cart2'...
Listing './lib/python3.5/site-packages/FunctionalPython-0.0.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
